samples/_failures_safe/1761394008_d5f67b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92ca0f7b.c: In function ‘main’:
./samples/SAFE/__tmp_92ca0f7b.c:151:5: error: expected expression at end of input
  151 |     if (len > 0 && input_buffer[len - 1] ==
      |     ^~
./samples/SAFE/__tmp_92ca0f7b.c:151:5: error: expected declaration or statement at end of input
